--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 
+	<div id="container">
+		<h1>To-Do List</h1>
+		<input type="text">
+
+		<ul>
+			<li><span>X</span> Eat food</li>
+			<li><span>X</span> read</li>
+			<li><span>X</span> do homework</li>
+		</ul>
+	</div>
 
 	<script type="text/javascript" src="assests/js/todos.js"></script>
 
