--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
 	<title>Todo List</title>
 	<link rel="stylesheet" type="text/css" href="assests/css/todos.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="assests/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
 	<div id="container">
-		<h1>To-Do List</h1>
-		<input type="text">
+		<h1>To-Do List <span id="toggle-form"><i class="fa fa-plus"></i></span></h1>
+		<input type="text" placeholder="Add New Todo">
 
 		<ul>
-			<li><span>X</span> Eat food</li>
-			<li><span>X</span> read</li>
-			<li><span>X</span> do homework</li>
+			<li><span><i class="fa fa-trash"></i></span> Eat food</li>
+			<li><span><i class="fa fa-trash"></i></span> read</li>
+			<li><span><i class="fa fa-trash"></i></span> do homework</li>
 		</ul>
 	</div>
 
